crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_analyze_codebase.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
assertion_line: 42
expression: "tool_entry(\"analyze_codebase\")"
---
{
  "name": "analyze_codebase",
  "description": "Index a codebase (C/C++, Rust, Go, Python, C#, Java) and build the code graph. Args: required absolute `path`; optional `force` (default false; true bypasses cached entries within the requested scope). Usually returns `{ files, symbols, edges, root_path, warnings? }`; a coalesced request waits for its covering job and adds `coalesced_by` with that job ID (otherwise absent), while a distinct request admitted behind work already pending returns immediately with `{ job_id, status: \"queued\", started_at, existing: false, note }` — poll `get_job_status(job_id)`. The shared FIFO holds at most 32 pending jobs; covered requests still coalesce at capacity, but a distinct request beyond that limit returns a retryable queue-full tool error. Must be called before query tools.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "force": {
        "default": null,
        "description": "Force full re-index, ignoring any cache (default false)",
        "type": [
          "boolean",
          "null"
        ]
      },
      "path": {
        "description": "Absolute path to the directory to index",
        "type": "string"
      }
    },
    "required": [
      "path"
    ],
    "title": "AnalyzeCodebaseArgs",
    "type": "object"
  }
}
