crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_analyze_codebase_async.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"analyze_codebase_async\")"
---
{
  "name": "analyze_codebase_async",
  "description": "Kick off `analyze_codebase` on a background task and return immediately (< 1KB, sub-second) with a job handle. The indexing pipeline runs detached on the tokio runtime; agents observe progress and the terminal result by polling `get_status`. Prefer this over the sync `analyze_codebase` for large codebases (UE / LLVM-scale, ~130-200s wall time) or any case where the client's `MCP_TOOL_TIMEOUT` could fire on a long sync call — every individual tool call is sub-second, so the per-call timer never fires. Args: `path` (required, absolute path to index — same wording as `analyze_codebase`), `force` (optional, default false — full re-index ignoring the cache). Response shape: `{ job_id, status, started_at, existing, note }`. `job_id` is the 20-char zero-padded decimal ID of the canonical pending scan (distinct canonical scans are unique; absorbed callers share the coverer's ID); `status` is always the literal `\"running\"` at kickoff; `started_at` is RFC3339 UTC; `existing` is false for every accepted request; `note` is a short human-readable hint. **Polling pattern:** call `get_status` and read the `analyze_job` field. Poll while `analyze_job.status == \"running\"`; once it flips to `\"completed\"` read `analyze_job.result` (byte-identical shape to `analyze_codebase`'s success body — `{ files, symbols, edges, root_path, warnings }`); on `\"failed\"` read `analyze_job.error`. A poll cadence of 250-1000ms is a reasonable starting point — the slot and inner state locks are held only for `Arc::clone` and a small struct read on each poll, so polling does not contend with the worker meaningfully. **Grace window:** after a job terminates its result is preserved in `analyze_job_previous_terminal` for exactly ONE additional kickoff — if you start a new analyze before reading the prior terminal, the prior result is still recoverable for that one rotation, after which it is gone. **Concurrent kickoff:** every arrival while a scan is running enters the pending analyze-only FIFO; only pending canonical paths compact, never the running scan. An equal or descendant request follows its pending coverer; an incoming ancestor replaces pending descendants at the earliest displaced FIFO position; disjoint paths keep FIFO order. The response still returns immediately and callers poll the shared `analyze_job`; `force` is ORed across compacted pending work. There is no contention error or argument-ignored duplicate path.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "force": {
        "default": null,
        "description": "Force full re-index, ignoring any cache (default false)",
        "type": [
          "boolean",
          "null"
        ]
      },
      "path": {
        "description": "Absolute path to the directory to index",
        "type": "string"
      }
    },
    "required": [
      "path"
    ],
    "title": "AnalyzeCodebaseAsyncArgs",
    "type": "object"
  }
}
