crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_detect_communities_async.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"detect_communities_async\")"
---
{
  "name": "detect_communities_async",
  "description": "Kick off whole-graph file community detection and return immediately (< 1KB, sub-second). Args match `detect_communities`: `granularity` defaults to \"file\" (the only supported value); `max_iterations` defaults to 50 (max 500, 0 uses default); `members_per_community` defaults to 10 (max 100, 0 uses default); `limit` defaults to 100 (max 1000, 0 uses default); `offset` defaults to 0. Requires an index and validates arguments before issuing a job. Returns `{ job_id, status, started_at, existing, note }`, where status is `\"running\"` or `\"queued\"`. The shared FIFO holds at most 32 pending jobs; a distinct community job beyond that limit gets a retryable queue-full tool error. Poll `get_job_status(job_id)` for the bare generic JobView and its terminal `result`, which has the same `DetectCommunitiesResponse` shape and semantics as sync. The JobView wrapper reserves bytes from the captured `max_bytes`, so it can contain fewer rows and a different `next_offset` than sync; resume with `offset = next_offset`, except an empty `truncated` page whose `next_offset` is unchanged is a start-fresh marker: do NOT retry unchanged; raise `[response].max_bytes`, rerun `analyze_codebase` to refresh cached config, then retry. Use `get_status` for the shared FIFO diagnostic. Prefer this form on large graphs where a synchronous client wall-clock timeout could fire.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "granularity": {
        "default": null,
        "description": "Aggregation granularity for community detection. Only \"file\" is currently supported and is the default (absent/empty also resolves to \"file\"); any other non-empty value is a tool error.",
        "type": [
          "string",
          "null"
        ]
      },
      "limit": {
        "default": null,
        "description": "Maximum communities to return (default 100, max 1000)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "max_iterations": {
        "default": null,
        "description": "Maximum label-propagation sweeps before giving up (default 50, max 500; 0 resolves to the default). The response's `termination` field reports whether propagation converged before this ceiling or was cut off by it.",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "members_per_community": {
        "default": null,
        "description": "Maximum member file paths kept per community (default 10, max 100; 0 resolves to the default). Independent of `limit`/`offset`, which page over the LIST of communities — this caps the member list INSIDE each community. A community whose members are cut by this cap sets that community's own `truncated: true` and `original_len` to the pre-truncation member count; raise `members_per_community` to see fuller member lists, not `limit`.",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "offset": {
        "default": null,
        "description": "Skip first N communities for pagination (default 0)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      }
    },
    "title": "DetectCommunitiesArgs",
    "type": "object"
  }
}
