crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_detect_cycles.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
assertion_line: 81
expression: "tool_entry(\"detect_cycles\")"
---
{
  "name": "detect_cycles",
  "description": "Detect circular include dependencies (strongly-connected components of the include graph). Returns the {results, total, offset, limit, truncated, next_offset} envelope; each `results[i]` is a `Cycle` {files, truncated, original_len?} — `files` is the file paths in one cycle in canonical sorted order, `truncated` is that cycle's own per-file-list flag, and `original_len` (the pre-truncation file count) is present ONLY when that cycle's file list was shortened. There are TWO independent `truncated` notions: the ENVELOPE's `truncated` means there are more cycles in further pages; each `Cycle.truncated` means that one cycle's `files` list was capped — they do not imply each other. The envelope's `truncated`/`next_offset` are honest and by-COUNT: `truncated=true` with a non-null `next_offset` means more cycles remain — re-call with `offset = next_offset` to resume; `truncated=false` plus `next_offset=null` means this page is the complete/last set of cycles. Cycles are sorted internally by path and the outer list by each cycle's first path, so pagination is deterministic across calls. The byte budget at [response].max_bytes does NOT apply to `detect_cycles`: cycle pagination is purely by-count via `limit`/`offset`, never by serialized size. `limit` defaults to 20 (0 resolves to 20; clamped at 1000, the echoed `limit` reflects the resolved value); the default is small because cycles are rare in well-maintained codebases. `offset` defaults to 0; to advance through pages set `offset = next_offset` from the truncated envelope (not an arbitrary increment). `max_cycle_size` defaults to 50 (0 resolves to 50; clamped at 500) and caps each returned cycle's `files` list: a cycle longer than the cap is shortened in place and reports `Cycle.truncated: true` with `Cycle.original_len` = the pre-truncation file count; cycles at or under the cap keep `truncated: false` with `original_len` absent. Raise `max_cycle_size` to see fuller file lists for large SCCs. Consult the envelope `truncated`, not `results.length`, to detect whether more cycle pages remain.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "limit": {
        "default": null,
        "description": "Maximum cycles to return (default 20, max 1000)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "max_cycle_size": {
        "default": null,
        "description": "Maximum file paths to keep per cycle (default 50, max 500). Cycles longer than this have their `files` list truncated; that cycle's own `Cycle.truncated` field is then `true` and its `original_len` = the pre-truncation file count (this is per-cycle, distinct from the envelope's `truncated`).",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "offset": {
        "default": null,
        "description": "Skip first N cycles for pagination (default 0)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      }
    },
    "title": "DetectCyclesArgs",
    "type": "object"
  }
}
