crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_generate_diagram.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"generate_diagram\")"
---
{
  "name": "generate_diagram",
  "description": "Generate a graph diagram: call graph (`symbol=`), file dependencies (`file=`), or inheritance tree (`class=`). Provide EXACTLY ONE of `symbol`/`file`/`class` (empty strings count as absent); zero or more than one is an error. `direction` (symbol mode only) is one of `\"callees\"` (only what the symbol calls), `\"callers\"` (only what calls the symbol), or `\"both\"` (default — callees and callers in one diagram); set `direction=\"callees\"` to show only outgoing calls. `direction` is IGNORED for `file=`/`class=` modes — passing it there is silently accepted, NOT rejected; an unrecognized spelling IS rejected, but only in symbol mode. LOSSY DEDUPE: edges that render to the same (from_label, to_label) pair collapse into ONE — two distinct symbols whose display labels collide (e.g. same `parent::name` in different files) become a single diagram edge by design (visual coherence over ID-level fidelity). Clients needing ID-level fidelity should call `get_callers`/`get_callees` instead. UNRESOLVED-TARGET FILTER: calls to symbols not in the index are dropped from the diagram — they no longer appear as file-basename pseudo-nodes (an absent edge is a truer signal than a synthetic node with no symbol behind it). `format` is `\"edges\"` (default; JSON array of `{from, to, label, direction, candidates?}` objects, `[]` when empty) or `\"mermaid\"` (Mermaid flowchart text). In `symbol=` mode every edge carries `candidates` — how many same-named definitions competed for the traversed call edge's target (1 = sole candidate, N ≥ 2 = the scope rule picked one of N; `min_confidence=\"resolved\"` drops every Heuristic edge — the N ≥ 2 scope-rule picks AND the Heuristic/1 receiver-unverified sole-candidate picks; reading `candidates` keeps them and says how contested each was). `file=` and `class=` edges OMIT the field entirely (not null) — include and inheritance edges carry no resolver metadata, the same boundary that makes `min_confidence` a symbol-mode-only knob. Every edge carries `direction`: `\"calls\"` (outgoing — the `from` endpoint calls `to`) or `\"called_by\"` (incoming — `from` is an inbound caller of `to`). In call-graph (`symbol=`) Mermaid output `\"calls\"` renders as a solid `-->|calls|` arrow and `\"called_by\"` as a dashed `-.->|called by|`; `file=` and `class=` modes always emit solid arrows with their own edge labels (`-->|includes|`, `-->|inherits|`). In `both` mode a single underlying call reachable from both traversal arms is emitted ONCE, tagged by whichever arm reached it first in BFS order; a genuinely bidirectional pair (A→B and B→A) survives as two edges. `depth` (default 1; 0 or omitted resolves to 1) bounds BFS traversal distance. `max_nodes` (default 30; 0 or omitted resolves to 30; no upper clamp) bounds nodes visited by the BFS in every mode; raise it when a symbol/file/class neighborhood exceeds 30. `styled` (default false, mermaid format only) highlights the center node. On a `symbol=` or `class=` miss the error carries did-you-mean suggestions; a `file=` miss returns a bare not-found (no suggestion source for filenames). When `file=` is used, the path is resolved against the indexed graph; `\\\\?\\` extended-path prefix is handled automatically, and relative segments (`.` / `..`) resolve against the on-disk file when it exists (otherwise lexical-only). The `symbol=` and `class=` modes take identifiers, not paths, and are NOT normalized — pass them exactly as they appear in the index.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "class": {
        "default": null,
        "description": "Class name to center the inheritance diagram on",
        "type": [
          "string",
          "null"
        ]
      },
      "depth": {
        "default": null,
        "description": "BFS traversal depth (default 1)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "direction": {
        "default": null,
        "description": "Call-graph direction (symbol mode only): 'callees', 'callers', or 'both' (default)",
        "type": [
          "string",
          "null"
        ]
      },
      "file": {
        "default": null,
        "description": "File path to center the dependency graph on",
        "type": [
          "string",
          "null"
        ]
      },
      "format": {
        "default": null,
        "description": "Output format: 'edges' (default, minimal JSON) or 'mermaid' (Mermaid flowchart syntax)",
        "type": [
          "string",
          "null"
        ]
      },
      "max_nodes": {
        "default": null,
        "description": "Maximum nodes in diagram (default 30)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "min_confidence": {
        "default": null,
        "description": "Minimum resolver confidence required for an edge to appear (symbol mode only): \"any\" (default) admits Heuristic edges, \"resolved\" drops every Heuristic edge — scope-rule picks from N same-name candidates AND receiver-typed sole-candidate picks (Heuristic/1). Same wire spelling and semantics as on `get_callers`/`get_callees`. Ignored by file and class modes — file dependencies and inheritance edges don't carry confidence today.",
        "type": [
          "string",
          "null"
        ]
      },
      "styled": {
        "default": null,
        "description": "When format=mermaid, add CSS styling and center node highlighting (default false)",
        "type": [
          "boolean",
          "null"
        ]
      },
      "symbol": {
        "default": null,
        "description": "Symbol ID to center the call graph on (format: file:name)",
        "type": [
          "string",
          "null"
        ]
      }
    },
    "title": "GenerateDiagramArgs",
    "type": "object"
  }
}
