crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_get_callees.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"get_callees\")"
---
{
  "name": "get_callees",
  "description": "Find functions called by the given symbol (downstream call chain). `symbol` is a Symbol ID in the `file:name` or `file:Parent::name` format returned by get_file_symbols/search_symbols. Returns the `Page<CallChain>` envelope {results, total, offset, limit, truncated, next_offset}, where each `CallChain` is `{symbol_id, file, line, depth}` and is sorted by (depth, symbol_id) ascending so the closest callees appear first. **CallChain field semantics:** `symbol_id` is the DEFINITION site (the callee being reported, in `file:name`/`file:Parent::name` form); `file` and `line` are the CALL site — the source file and line of the `Calls` edge that reached this hop. The call site (`file`) is always in the queried symbol's file — the function making the call — never in the callee's definition file. So `file` and the file segment of `symbol_id` diverge whenever the callee is defined outside the queried symbol's file, including at depth 1 (any cross-file call); at depth ≥ 2 the same asymmetry compounds as the BFS hops through intermediate frames. To recover \"where is this defined?\" split `symbol_id` on the rightmost `:` not part of `::` — do NOT read `file`; that rule applies uniformly at all depths. **Resolved-only filter (parity with `generate_diagram`):** hops whose target is not a resolved project symbol are dropped at BFS time and never appear — bare-token unresolved callees (e.g. `Ok`, `printf`, `to_string`, language-builtin macros/stdlib calls) are filtered out uniformly across all six languages, so a function whose only outgoing calls hit unresolved tokens returns an empty page, not a page of bare-token rows. **Non-callable soft-hint (success, not error):** calling `get_callees` on a symbol whose kind is `struct`, `enum`, `trait`, `typedef`, or `interface` returns a `CallToolResult` SUCCESS (`is_error: false`) whose body is a plain-text advisory naming the symbol + kind and routing to `get_class_hierarchy` or `get_symbol_detail` (structural kinds: struct/enum/trait/interface — both tools offered), or to `get_symbol_detail` only (typedef) — NOT the `Page<CallChain>` envelope, so a JSON parse of the body will fail; clients pattern-matching the envelope must try plain-text first. A callable symbol with zero resolved callees still returns the empty `Page<CallChain>` envelope, preserving the trichotomy (wrong symbol → tool error; wrong tool for the kind → soft-hint success; callable with no resolved callees → empty envelope). `depth` defaults to 1 (direct callees only); raise it to walk further downstream. `limit` defaults to 100 (max 1000, clamped silently — the echoed `limit` reflects the resolved value); raise `limit` for symbols with wide fan-out, use `offset` to page through the remainder, or narrow by lowering `depth` to scope a specific subtree. `offset` defaults to 0; raise `offset` to skip past previous results, or set `offset = next_offset` to resume. Responses are also capped by `[response].max_bytes` (default 100KB); when either `limit` or the byte budget leaves records un-emitted, `truncated` is true and `next_offset` points at the first un-emitted record — re-call with `offset = next_offset` to resume. If a byte-starved page is empty and `next_offset` equals the requested `offset`, that is a start-fresh marker, not a continuation: do not retry unchanged; raise `[response].max_bytes`, re-run `analyze_codebase`, then retry. `truncated=false` plus `next_offset=null` means the page is complete. `results.length` may be less than `limit` when the byte cap fires, so consult `truncated`, not length, to detect partial pages.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "depth": {
        "default": null,
        "description": "Maximum traversal depth (default 1)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "limit": {
        "default": null,
        "description": "Maximum callees to return per page (default 100, max 1000)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "min_confidence": {
        "default": null,
        "description": "Minimum resolver confidence required for a hop to appear. \"any\" (default) includes every resolved edge; \"resolved\" drops edges the resolver picked from N same-name candidates (Heuristic) and returns only chains the resolver was sure about. Same semantics as on `get_callers`.",
        "type": [
          "string",
          "null"
        ]
      },
      "offset": {
        "default": null,
        "description": "Skip first N callees for pagination (default 0)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "symbol": {
        "description": "Symbol ID in format file:name",
        "type": "string"
      }
    },
    "required": [
      "symbol"
    ],
    "title": "GetCalleesArgs",
    "type": "object"
  }
}
